--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.7",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
